# stock-recommendation-system

./: .dockerignore  .env_template  .gitignore  .pre-commit-config.yaml  BalanceSheet_AAA_0.xlsx  BalanceSheet_ACB_0.xlsx  BalanceSheet_most_common_fields.json  CashFlow_AAA_0.xlsx  CashFlow_ACB_0.xlsx  CashFlow_most_common_fields.json  IncomeStatement_AAA_0.xlsx  IncomeStatement_ACB_0.xlsx  IncomeStatement_most_common_fields.json  MACrossover.html  README.md  SSI_BalanceSheet.parquet  SSI_VIC_Financial_Ratio_13112023.xlsx  Stocks.drawio  alo.py  backtest.csv  cpi_17_23.csv  data.csv  data.json  data.txt  docker-compose.yaml  dockerfile  exchange_rates_17_23.csv  file.xlsx  financial_ratios.csv  gdp_17_23.csv  grouped_data.json  hello.py  interest_rates_17_23.csv  labor_17_23.csv  pyproject.toml  ranking.csv  recommend_test.ipynb  recommended_stock.csv  requirements.txt  ssi_ws_connector.py  (+7 more)
api/: server.py
config/: default.py  logging_config.py
core/: __init__.py
crawler/: fireant_fin_statement.py  get_fin_statement.py  get_fireant_fin_statement.py  get_fireant_historical_vnindex.py  get_ssi_fin_ratio.py  get_ssi_hist_daily_price.py  get_vietstock.py  get_vietstock_fin_ratio.py  get_vietstock_macro.py  get_vietstock_marco.py  get_vn100.py  lightning_lstm.ipynb  main.py  ssi_fin_statements.py  test.ipynb
data/: abc.xlsx  financial_ratios.csv  industry_sector_analysis.csv
financial_statements/: BalanceSheet_AAA_0.xlsx  BalanceSheet_CTR_0.xlsx  BalanceSheet_DBC_0.xlsx  BalanceSheet_EIB_0.xlsx  BalanceSheet_GMD_0.xlsx  BalanceSheet_HAG_0.xlsx  BalanceSheet_HDC_0.xlsx  (+48 more)
(+926 files in other folders)
