[project]
name = "stock-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "instructor>=1.7.2",
    "isort>=5.13.2",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.0",
    "sqlalchemy>=2.0.36",
]
